<resources>
    <string name="app_name">Destination App</string>
    <string name="name_of_destination">name of destination</string>
    <string name="name">name</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="image_detail_description">image detail description</string>
    <string name="profile">profile</string>
    <string name="muhammad_ali_mukti">Muhammad Ali Mukti</string>
    <string name="email">a2112059@bangkit.academy</string>
    <string name="profile_image">profile image</string>
    <string name="identity_description">identity description</string>
    <string name="email_description">email description</string>
</resources>